  an extended period of time.  (John Arbash Meinel, #494406)

* Check for SIGINT (Ctrl-C) and other signals immediately if ``readdir``
  returns ``EINTR`` by calling ``PyErr_CheckSignals``.  This affected the
  optional ``_readdir_pyx`` extension.  (Andrew Bennetts, #495023)

* Give a clearer message if the lockdir disappears after being apparently
  successfully taken.  (Martin Pool, #498378)

* If we fail to open ``~/.bzr.log`` write a clear message to stderr rather
  than using ``warning()``. The log file is opened before logging is set
  up, and it leads to very confusing: 'no handlers for "bzr"' messages for
  users, rather than something nicer.
  (John Arbash Meinel, Barry Warsaw, #503886)

* The 2a format wasn't properly restarting autopacks when something
  changed underneath it (like another autopack). Now concurrent
  autopackers will properly succeed. (John Arbash Meinel, #495000)

* ``_update_current_block`` no longer suppresses exceptions, so ^C at just
  the right time will get propagated, rather than silently failing to move
  the block pointer. (John Arbash Meinel, Gareth White, #495023)

Improvements
************

Documentation
*************

API Changes
***********

Internals
*********

Testing
*******

* We have a new ``test_source`` that ensures all pyrex ``cdef`` functions
  handle exceptions somehow. (Possibly by setting ``# cannot_raise``
  rather than an ``except ?:`` clause.) This should help prevent bugs like
  bug #495023. (John Arbash Meinel)


bzr 2.0.3
#########

:Codename: little italy
:2.0.3: 2009-12-14


The third stable release of Bazaar has a small handful of bugfixes. As
expected, this has no internal or external compatibility changes versus
2.0.2 (or 2.0.0).

Bug Fixes
*********

* ``bzr push --use-existing-dir`` no longer crashes if the directory
  exists but contains an invalid ``.bzr`` directory.
  (Andrew Bennetts, #423563)

* Content filters are now applied correctly after pull, merge and switch.
  (Ian Clatworthy, #385879)